<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="version_code">baek seu mul yeo deol</string>
    <string name="app_name">"dark material // blacked out"</string>
    <string name="arcus_theme_name">"dark material //"</string>
    <string name="launcher_name">"dark material"</string>
    <string name="package_name">"com.chummy.jezebel.material.dark"</string>
    <string name="theme_name">"Dark Material"</string>
    <string name="team">"chummy development team"</string>
    <string name="theme_author">"chummy development team"</string>
    <string name="developer_name">Nicholas Philip Chum</string>
    <string name="developer_link">http://forum.xda-developers.com/member.php?u=3605033</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=com.chummy.jezebel.material.dark</string>
    <string name="play_store_link_regression">https://play.google.com/store/apps/details?id=com.chummy.jezebel.material.dark.regression</string>
    <string name="play_store_dev_link">https://play.google.com/store/apps/dev?id=6772568782420610939</string>
    <string name="play_store_link_logcat">https://play.google.com/store/apps/details?id=com.nolanlawson.logcat</string>
    <string name="play_store_arcus">https://play.google.com/store/apps/details?id=pixkart.arcus</string>
    <string name="play_store_whicons">https://play.google.com/store/apps/details?id=com.whicons.iconpack</string>
    <string name="whicons_name">whicons - white icon pack</string>
    <string name="whicons_description">a highly recommended minimal white icon pack designed by Tom Ver (Randle) - an exquisite accompaniment to this theme.</string>
    <string name="json_file_url">"http://pastebin.com/raw.php?i=hvKBvrXD"</string>
    <string name="help_q_1">why does this app need root?</string>
    <string name="help_a_1">as android requires root for you to use certain permissions, the three buttons on the home screen include \'restart systemui\' and \'restart device\', which require root access.</string>
    <string name="help_q_2">why does this app have so many permissions?</string>
    <string name="help_a_2">the app comes with:\na wallpaper downloading section (network permissions)\nafter download the wallpaper can be immediately set as wallpaper (set wallpaper permission)\nwallpaper saving on internal storage (modify/delete contents permission).</string>
    <string name="card_one_title">"android system base requirements"</string>
    <string name="card_one_list">"Framework-res (com.android)
        SystemUI (com.android.systemui)
        Settings (com.android.settings)"</string>
    <string name="card_two_title">"android system app support"</string>
    <string name="card_two_list">AOSP Browser (com.android.browser)
        \nAOSP Keyboard (com.android.inputmethod.latinime)
        \nAOSP Lollipop Messaging (com.android.mms)
        \nAOSP Marshmallow Messaging (com.android.messaging)
        \nBluetooth Transfer (com.android.bluetooth)
        \nCalculator (com.android.calculator2)
        \nCalendar (com.android.calendar)
        \nCellBroadcastReceiver (com.android.cellbroadcastreceiver)
        \nGoogle Camera (com.android.camera2)
        \nContacts (com.android.contacts)
        \nClock (com.android.deskclock)
        \nDocumentsUI (com.android.documentsui)
        \nGallery (com.android.gallery3d)
        \nPackage Installer (com.android.packageinstaller)
        \nSound Recorder (com.android.soundrecorder)
        \nTeleService (com.android.server.telecom)
        \nPhone (com.android.phone)</string>
    <string name="card_three_title">"rom specific app support"</string>
    <string name="card_three_list">About Bliss (bliss.about)
        \nAICP OTA (com.aicp.aicpota)
        \nAICP Tweaks (com.lordclockan)
        \nBlissOTA (com.chummy.blissroms.updates)
        \nBlissPapers (com.death2all110.blisspapers)
        \nDevice Control (org.namelessrom.devicecontrol)
        \nDU About (com.dirtyunicorns.about)
        \nDU Updater (com.dirtyunicorns.duupdater)
        \nEuphoria Mahdi TouchControl (com.mahdi.touchcontrol)
        \nEuphoria Updater (com.euphoria.ota)
        \nLiquid Updater (com.liquid.updater)
        \nPureNexusSettings (com.android.purenexussettings)
        \nSlim Device (com.slim.device)
        \nSlimLauncher (com.slim.slimlauncher)
        \nTemasek OTA (com.ota.updates)</string>
    <string name="card_four_title">"cyanogen/cyanogenmod app support"</string>
    <string name="card_four_list">Advanced Settings (com.cyanogenmod.settings.device)
        \nAudioFX (org.cyanogenmod.audiofx)
        \nCyanogenMod Account (com.cyanogenmod.account)
        \nEleven (com.cyanogenmod.eleven)
        \nFile Manager (com.cyanogenmod.filemanager)
        \nGalleryNext (com.cyngn.gallerynext)
        \nLockClock (com.cyanogenmod.lockclock)
        \nSetup Wizard (com.cyanogenmod.setupwizard)
        \nSnap Browser (com.cyngn.browser)
        \nThemeChooser - CyanogenMod 12/12.1 (org.cyanogenmod.theme.chooser)
        \nThemeChooser - Cyanogen OS 12 (com.cyngn.theme.chooser)
        \nTheme Store (com.cyngn.themestore)
        \nTrebuchet (com.cyanogenmod.trebuchet)
        \nUpdater (com.cyanogenmod.updater)</string>
    <string name="card_five_title">"google app support"</string>
    <string name="card_five_list">Android Wear (com.google.android.wearable.app)
        \nAuthenticator (com.google.android.apps.authenticator2)
        \nChrome (com.android.chrome)
        \nChrome Beta (com.chrome.beta)
        \nChrome Dev (com.chrome.dev)
        \nChromecast (com.google.android.apps.chromecast.app)
        \nCloud Print (com.google.android.apps.cloudprint)
        \nDialer (com.google.android.dialer)
        \nDocs, Sheets, Slides (com.google.android.apps.docs.editors.docs/sheets/slides)
        \nGmail (com.google.android.gm)
        \nGoogle Now Launcher (com.google.android.launcher)
        \nGoogle Search (com.google.android.googlequicksearchbox)
        \nGoogle Keyboard (com.google.android.inputmethod.latin)
        \nGoogle Keyboard - Cantonese (com.google.android.apps.inputmethod.cantonese)
        \nGoogle+ (com.google.android.apps.plus)
        \nGoogle Camera (com.google.android.GoogleCamera)
        \nGoogle TTS (com.google.android.tts)
        \nHangouts (com.google.android.talk)
        \nInbox (com.google.android.apps.inbox)
        \nKeep (com.google.android.keep)
        \nMessenger (com.google.android.apps.messaging)
        \nMusic (com.google.android.music)
        \nNewsstand/Magazines (com.google.android.apps.magazines)
        \nPackage Installer (com.google.android.packageinstaller)
        \nPhotos (com.google.android.apps.photos)
        \nPlay Services (com.google.android.gms)
        \nRewards (com.google.android.apps.paidtasks)
        \nTranslate (com.google.android.apps.translate)
        \nYoutube (com.google.android.youtube)
        \nYoutube Gaming (com.google.android.apps.youtube.gaming)</string>
    <string name="card_six_title">"third party app support"</string>
    <string name="card_six_list">Advanced Download Manager (com.dv.adm)
        \nAK Kernel Updater (com.callmealdy.kernelupdater)
        \nAmazon Fire TV Remote (com.amazon.storm.lightning.client.aosp)
        \nAmazon MP3 (com.amazon.mp3)
        \nAmazon Video (com.amazon.avod.thirdpartyclient)
        \nApollo (com.andrew.apollo)
        \nAudials + Audials Free (com.audials.paid)
        \nA Better Camera Unlocked (com.almalence.opencam_plus)
        \nAlarmSolo (net.maicas.android.alarmsolo)
        \nApex Launcher (com.anddoes.launcher)
        \nArcus (pixkart.arcus)
        \nBetterBatteryStats Play (com.asksven.betterbatterystats)
        \nBetterBatteryStats XDA (com.asksven.betterbatterystats_xdaedition)
        \nBlackPlayer EX + BlackPlayer Free (com.kodarkooperativet.blackplayerex)
        \nBlueMail (me.bluemail.mail)
        \nBzzapp Reminders (com.bzzzapp)
        \nCatLog (com.nolanlawson.logcat)
        \nClean Master Security (com.cleanmaster.security)
        \nColor Picker (com.nauj27.android.colorpicker)
        \nCortana (com.microsoft.cortana)
        \nDelayed Lock (de.j4velin.delayedlock2.trial)
        \nDU Certified (com.dirtyunicorns.certified)
        \nDropbox + Dropbox Material (com.dropbox.android)
        \nEbay (com.ebay.mobile)
        \nES File Explorer (com.estrongs.android.pop)
        \nFacebook (com.facebook.katana)
        \nFacebook Messenger (com.facebook.orca)
        \nFeedly (com.devhd.feedly)
        \nFX Explorer (nextapp.fx)
        \nGravityBoxLP (com.ceco.lollipop.gravitybox)
        \nGravityBoxMM (com.ceco.marshmallow.gravitybox)
        \nGreenify (com.oasisfeng.greenify)
        \nGroupMe (com.groupme.android)
        \nInstagram (com.instagram.android)
        \nKate Pro (com.perm.kate.pro)
        \nKernel Adiutor (com.grarak.kerneladiutor)
        \nKik (kik.android)
        \nLiveboot (eu.chainfire.liveboot)
        \nLightflow (com.rageconsulting.android.lightflow)
        \nLockscreen Changer CM13 (com.alicantedevelopers.lockscreenchangercm13)
        \nMatLog (com.pluscubed.matlog)
        \nMoovit (com.tranzmate)
        \nMultiROM Manager (com.tassadar.multirommgr)
        \nMusixMatch (com.musixmatch.android.lyrify)
        \nNoChromo (com.metalasfook.nochromo)
        \nNova Launcher + Materinova (com.teslacoilsw.launcher)
        \nMusixMatch (com.musixmatch.android.lyrify)
        \nOGYoutube (com.google.android.ogyoutube)
        \nOpenCamera (net.sourceforge.opencamera)
        \nPandora (com.pandora.android)
        \nPandora Patcher (com.hunterx.pandorapatcher)
        \nPhonograph (com.kabouzeid.gramophone)
        \nPipette (com.ochs.pipette)
        \nPlayerPro + Trial (com.tbig.playerpro)
        \nPocket MAL (com.g.pocketmal)
        \nPowerAMP (com.maxmpz.audioplayer)
        \nPushbullet (com.pushbullet.android)
        \nPushbullet Portal (com.pushbullet.android.portal)
        \nPushover (net.superblock.pushover)
        \nQuickPic (com.alensw.PicFolder)
        \nRecently (eu.chainfire.recently)
        \nReddit Sync (com.laurencedawson.reddit_sync)
        \nRelay for Reddit (reddit.news)
        \nSDMaid (eu.thedarken.sdm)
        \nSetCPU (com.mhuang.overclocking)
        \nShuttle+ (com.simplecity.amp_pro)
        \nSimple Reboot (simple.reboot.com)
        \nSlack (com.Slack)
        \nSkype (com.skype.raider)
        \nSnapchat (com.snapchat.android)
        \nSolid Explorer (pl.solidexplorer2)
        \nSony Sketch (com.sonymobile.sketch)
        \nSony Video (com.sonyericsson.video)
        \nSony Walkmann (com.sonyericsson.music)
        \nSuperSU (eu.chainfire.supersu)
        \nSWE Jswarts Browser (org.notphenom.swe.browser)
        \nSwype (com.nuance.swype.dtc)
        \nTapatalk (com.quoord.tapatalkpro.activity)
        \nTeslaUnread (com.teslacoilsw.notifier)
        \nTexdroiderDPI (com.texdroider.texdroider_dpi)
        \nTextNow (com.enflick.android.TextNow)
        \nTextra (com.textra)
        \nTextSecure (org.thoughtcrime.securesms)
        \nThreema (ch.threema.app)
        \nTinfoil for Facebook (com.danvelazco.fbwrapper)
        \nTitaniumBackup (com.keramidas.TitaniumBackup)
        \nTooleap CatLog (com.tooleap.logcat)
        \nTricksterMod (com.bigeyes0x0.trickstermod)
        \nTwitter (com.twitter.android)
        \nViber (com.viber.voip)
        \nVindicator OTA (com.mcswainsoftware.vindicator.ota)
        \nViper4Android (com.vipercn.viper4android_v2)
        \nVLC (org.videolan.vlc)
        \nVLC Debug (org.videolan.vlc.debug)
        \nWeatherBug (com.aws.android)
        \nWeather Timeline (com.samruston.weather)
        \nWhatsApp + WhatsApp Material (com.whatsapp)
        \nWhisperPush (org.whispersystems.whisperpush)
        \nXDA Labs (com.xda.labs)
        \nXDA One (com.xda.one)
        \nXposed Installer (de.robv.android.xposed.installer)</string>
</resources>