<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_material">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/help1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_margin"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                card_view:cardBackgroundColor="@color/cardsbg"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/cards_elevation">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cards_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cdt_banner"
                        android:layout_margin="@dimen/cards_text_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:gravity="center"
                            android:text="@string/help_q_1"
                            android:textColor="@color/title_color"
                            android:textSize="@dimen/text_big" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/cards_text_margin"
                            android:layout_marginTop="@dimen/cards_text_margin"
                            android:gravity="center"
                            android:lineSpacingMultiplier="1.2"
                            android:text="@string/help_a_1"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/text_small" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/help2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/help1"
                android:layout_margin="@dimen/cards_margin"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                card_view:cardBackgroundColor="@color/cardsbg"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/cards_elevation">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cards_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cdt_banner"
                        android:layout_margin="@dimen/cards_text_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:gravity="center"
                            android:text="@string/help_q_2"
                            android:textColor="@color/title_color"
                            android:textSize="@dimen/text_big" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/cards_text_margin"
                            android:layout_marginTop="@dimen/cards_text_margin"
                            android:gravity="center"
                            android:lineSpacingMultiplier="1.2"
                            android:text="@string/help_a_2"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/text_small" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>